# a_service

./: .gitignore  Dockerfile  Dockerfile_unittests  README.md  alembic.ini  docker-compose-base.yml  docker-compose-dev.yml  docker-compose-test.yml  docker-compose-testing.yml  environments.md  pyproject.toml  pytest.ini
.github/workflows/: integration_testing.yml  integration_tests.yml  test.yml  unit_test.yml
app/: config.py  dependencies.py  handlers.py  main.py  routes.py  services.py
app/api/: dependencies.py  handlers.py  routes.py  schemas.py  services.py  tasks.py
app/api/schemas/: __init__.py  base.py  example.py  request.py  response.py
app/database/: db.py  models.py  postgres.py  redis.py
app/database/alembic/: env.py
app/database/alembic/versions/: 0863ca3ad87b_create_init_table.py  8f76f49a7105_add_activate_user_columns.py
app/tests/api/: conftest.py  test_data.yaml  test_index.py  test_index.yaml  test_registrate.py  test_registrate.yaml
app/tests/services/: test_auth_storage.py
app/utils/: decorators.py  file_reader.py  file_worker.py  funcs.py  mail.py  metrics.py  oauth2.py  password_manager.py  serializer.py
configs/: prometheus.yml
