
[project]
name = "authentication_service"
version = "0.0.1"
description = "Service for authentication users"
authors = [
    {name = "Dzmitry Zhybryk", email = "mr.zhybryk@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.2",
    "fastapi-jwt-auth>=0.5.0",
    "hypercorn>=0.14.3",
    "toml>=0.10.2",
    "aiofiles>=23.1.0",
    "psycopg[binary]>=3.1.9",
    "sqlalchemy[asyncio]>=2.0.15",
    "bcrypt>=4.0.1",
    "passlib>=1.7.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
